Bug 1427124 - fix body search for non-ASCII bodies (incl. 10 new test cases). r=aceman